
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ PFNGLISNAMEAMDPROC ;
typedef scalar_t__ PFNGLGENNAMESAMDPROC ;
typedef scalar_t__ PFNGLDELETENAMESAMDPROC ;
typedef scalar_t__ (* GLADloadproc ) (char*) ;


 int GLAD_GL_AMD_name_gen_delete ;
 scalar_t__ glad_glDeleteNamesAMD ;
 scalar_t__ glad_glGenNamesAMD ;
 scalar_t__ glad_glIsNameAMD ;

__attribute__((used)) static void load_GL_AMD_name_gen_delete(GLADloadproc load) {
 if(!GLAD_GL_AMD_name_gen_delete) return;
 glad_glGenNamesAMD = (PFNGLGENNAMESAMDPROC)load("glGenNamesAMD");
 glad_glDeleteNamesAMD = (PFNGLDELETENAMESAMDPROC)load("glDeleteNamesAMD");
 glad_glIsNameAMD = (PFNGLISNAMEAMDPROC)load("glIsNameAMD");
}
